--- a/app/globals.css
+++ b/app/globals.css
@@ -107,44 +107,56 @@
 
 @layer base {
   html {
-      font-family: Inter, Manrope, sans-serif, system-ui;
+      font-family: Righteous, Manrope, sans-serif, system-ui;
       -ms-overflow-style: none;  /* IE and Edge */
       scrollbar-width: none;  /* Firefox */
       color: #ffffff;
     }
   h2 {
-      font-family: Inter;
+      font-family: Righteous;
       letter-spacing: 2px;
       line-height: 1.2em;
       font-size: 3rem;
-      font-weight: 600;
+      font-weight: 700;
       text-transform: uppercase;
+      padding-top: 0.25em;
+      padding-bottom: 0.25em;
   }
   h3 {
-    font-family: Inter;
+    font-family: Righteous;
     letter-spacing: 2px;
     line-height: 1.2em;
-    font-size: 3rem;
-    font-weight: 300;
+    font-size: 2rem;
+    font-weight: 500;
     text-transform: uppercase;
+    padding-top: 1em;
+    padding-bottom: 0.25em;
   }
   h4 {
-      font-family: Manrope;
+      font-family: Righteous;
       font-size: 1.5rem;
+      padding-top: 1em;
+      padding-bottom: 0.25em;
   }
   p {
-      font-family: Manrope;
+      font-family: Comfortaa;
     }
-    li > ul { display: none; }
-    li:hover > ul { display: block; }
-    .lvl1 li { display: relative; position:relative; }
-    .lvl2 { position: absolute; }
-    .lvl2 li { position: relative; }
-    html::-webkit-scrollbar {
-      display: none;
-    }
+  li > ul { display: none; }
+  li:hover > ul { display: block; }
+  .lvl1 li { display: relative; position:relative; }
+  .lvl2 { position: absolute; }
+  .lvl2 li { position: relative; }
+  html::-webkit-scrollbar {
+    display: none;
+  }
+  a {
+    color: blue;
+  }
 }
 
+.kbarticle li {
+  list-style: inside;
+}
 @media only screen and (max-width: 600px) {
   li > ul { display: inline; }
   li:hover > ul { display: inline; }
@@ -157,14 +169,15 @@
 }
 
 @font-face {
-  font-family: 'Inter';
-  src: url(/fonts/Inter/Inter-VariableFont_slnt,wght.ttf) format('truetype');
+  font-family: 'Righteous';
+  src: url(/fonts/Righteous/Righteous-Regular.ttf) format('truetype');
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
 }
+
 @font-face {
-  font-family: 'Manrope';
-  src: url(/fonts/Manrope/Manrope-VariableFont_wght.ttf) format('truetype');
+  font-family: 'Comfortaa';
+  src: url(/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf) format('truetype');
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
 }
@@ -260,6 +273,10 @@
 	background: linear-gradient(-90deg, rgba(255, 24, 39, 1), black, rgba(255, 24, 39, 1));
 	background-size: 200% 200%;
 	animation: gradient 13s ease infinite;
+}
+
+.iwnavbar.li {
+  list-style: none;
 }
 
 @keyframes gradient {
