--- a/app/globals.css
+++ b/app/globals.css
@@ -110,7 +110,19 @@
       font-family: Righteous, Manrope, sans-serif, system-ui;
       -ms-overflow-style: none;  /* IE and Edge */
       scrollbar-width: none;  /* Firefox */
-      color: #ffffff;
+      background: var(--white);
+      color: var(--foreground);
+      transition: color var(--transition);
+    }
+  html::before {
+      content: "";
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      background: var(--black);
+      transform: translateX(-100%);
+      transition: transform var(--transition);
+      z-index: 0;
     }
   h2 {
       font-family: Righteous;
@@ -477,4 +489,92 @@ a.social:hover {
   height: 100%;
   width: 100%;
   position: absolute;
+}
+
+* {
+  box-sizing: border-box;
+    /* Make sure all elements are above the background */
+  z-index: 1;
+  position: relative;
+}
+
+:root {
+  --black: #004BD9;
+  --white: #f5f5f5;
+  --red:#ff1827;
+  --background: var(--white);
+  --foreground: var(--black);
+    --transition: 0.5s ease;
+}
+
+
+.toggle .hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.toggle-wrapper {
+  width: 60px;
+  display: block;
+}
+
+.toggle {
+  height: 25px;
+  width: 60px;
+  background: var(--foreground);
+  transition: background var(--transition);
+  border-radius: 40px;
+  padding: 3px;
+  position: relative;
+  margin: auto; 
+  cursor: pointer;
+}
+
+.toggle::before {
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+  border-radius: 30px;
+  background: var(--background);
+  transition: transform var(--transition), background var(--transition);
+  position: absolute;
+  z-index: 2;
+  transform: translate(0);
+  transition: transform var(--transition);
+}
+
+.toggle.enabled::before {
+  transform: translateX(32px);
+}
+
+.toggle input {
+    position: absolute;
+    top: 0;
+  opacity: 0;
+}
+
+.toggle .icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  margin: 0 5px;
+}
+
+.toggle .icons svg {
+  fill: var(--background);
+  height: 15px;
+  width: 15px;
+  z-index: 0;
+}
+
+/* When the darkmode class is applied, set the pseudo element position to 0 */
+.darkmode::before {
+  transform: translateX(0);
 }
